--- a/source/sass/c_local/60_site_elements/_custom_text.sass
+++ b/source/sass/c_local/60_site_elements/_custom_text.sass
@@ -24,7 +24,9 @@
     margin-right: 20%
     margin-left: rv(-1)
 
-
+.region-secondary-content
+  .callout-text
+    margin-right: 0
 .callout-text
   width: 30%
   margin-right: rv(0)
